refactor: simplify TestFailureDeduplicator idioms
- Replace Collectors.toList() with Stream.toList() (Java 16+)
- Replace lambda filter with Objects::nonNull method reference
- Sort parser imports alphabetically in TestTool